[gd_scene load_steps=10 format=3 uid="uid://db3jj6kepantd"]

[ext_resource type="FontFile" uid="uid://cudqsbu5ahhbr" path="res://assets/fonts/Kenney Future.ttf" id="1_4mhyn"]
[ext_resource type="Script" uid="uid://djvba0enysvld" path="res://game/menu/level_selection.gd" id="1_e2uwu"]
[ext_resource type="PackedScene" uid="uid://du0rp8w2ajl0q" path="res://game/gameplay_scene/gameplay_scene.tscn" id="2_2napj"]
[ext_resource type="Texture2D" uid="uid://b844n8ytyg1jk" path="res://assets/images/level/previews/dunes.png" id="3_17aq8"]
[ext_resource type="Resource" uid="uid://bcehlxsv8r8oc" path="res://game/gameplay_scene/levels/data/level_scenes.tres" id="3_adxoj"]
[ext_resource type="Texture2D" uid="uid://cfd4fyjo3hk76" path="res://assets/images/level/previews/plains.png" id="4_wyoml"]
[ext_resource type="Texture2D" uid="uid://bqw8nxkertcjt" path="res://assets/images/level/previews/dungeon.png" id="5_nktaa"]
[ext_resource type="Texture2D" uid="uid://cd8mwb4in3y3k" path="res://assets/images/ui/checkmark.png" id="6_72caj"]
[ext_resource type="Texture2D" uid="uid://dqbyavu174itt" path="res://assets/images/ui/x.png" id="7_4pcfj"]

[node name="LevelSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 768.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2uwu")
gameplay_scene = ExtResource("2_2napj")
level_scenes = ExtResource("3_adxoj")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -887.0
offset_top = -453.0
offset_right = 969.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 160

[node name="Dunes" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="MapTitleLabel" type="Label" parent="CenterContainer/HBoxContainer/Dunes"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4mhyn")
theme_override_font_sizes/font_size = 106
text = "Dunes"

[node name="DifficultyLabel" type="Label" parent="CenterContainer/HBoxContainer/Dunes"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.6342165, 0, 1)
theme_override_fonts/font = ExtResource("1_4mhyn")
theme_override_font_sizes/font_size = 61
text = "Easy"
horizontal_alignment = 1

[node name="MapPreview" type="Sprite2D" parent="CenterContainer/HBoxContainer/Dunes"]
position = Vector2(205, 384)
scale = Vector2(0.323, 0.323)
texture = ExtResource("3_17aq8")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/HBoxContainer/Dunes"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="SelectDunesButton" type="Button" parent="CenterContainer/HBoxContainer/Dunes"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("1_4mhyn")
theme_override_font_sizes/font_size = 76
text = " Play"

[node name="Plains" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="MapTitleLabel3" type="Label" parent="CenterContainer/HBoxContainer/Plains"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4mhyn")
theme_override_font_sizes/font_size = 106
text = "Plains"

[node name="DifficultyLabel2" type="Label" parent="CenterContainer/HBoxContainer/Plains"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.64705884, 0, 1)
theme_override_fonts/font = ExtResource("1_4mhyn")
theme_override_font_sizes/font_size = 61
text = "Medium"
horizontal_alignment = 1

[node name="MapPreview2" type="Sprite2D" parent="CenterContainer/HBoxContainer/Plains"]
position = Vector2(252, 386)
scale = Vector2(0.32259429, 0.32259429)
texture = ExtResource("4_wyoml")

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/HBoxContainer/Plains"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="SelectPlainsButton" type="Button" parent="CenterContainer/HBoxContainer/Plains"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("1_4mhyn")
theme_override_font_sizes/font_size = 76
text = " Play"

[node name="Dungeon" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="MapTitleLabel3" type="Label" parent="CenterContainer/HBoxContainer/Dungeon"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4mhyn")
theme_override_font_sizes/font_size = 106
text = "Dungeon"

[node name="DifficultyLabel3" type="Label" parent="CenterContainer/HBoxContainer/Dungeon"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85882354, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_4mhyn")
theme_override_font_sizes/font_size = 61
text = "Hard"
horizontal_alignment = 1

[node name="MapPreview3" type="Sprite2D" parent="CenterContainer/HBoxContainer/Dungeon"]
position = Vector2(308.00006, 386)
scale = Vector2(0.32259429, 0.32259429)
texture = ExtResource("5_nktaa")

[node name="MarginContainer3" type="MarginContainer" parent="CenterContainer/HBoxContainer/Dungeon"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="SelectDungeonButton" type="Button" parent="CenterContainer/HBoxContainer/Dungeon"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("1_4mhyn")
theme_override_font_sizes/font_size = 76
text = " PlaY"

[node name="ChangeWaveLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 882.0
offset_right = 536.0
offset_bottom = 1001.568
theme_override_fonts/font = ExtResource("1_4mhyn")
theme_override_font_sizes/font_size = 39
text = "Select starting 
wave (1-40)"

[node name="ChangeWaveNum" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = 985.0
offset_right = 186.252
offset_bottom = 1016.0
scale = Vector2(2.4581766, 2.4581766)
theme_override_fonts/font = ExtResource("1_4mhyn")
theme_override_font_sizes/font_size = 16
placeholder_text = "1"

[node name="SelectUnlimitedMoneyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 484.0
offset_top = 973.0
offset_right = 1719.0
offset_bottom = 1067.0
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("1_4mhyn")
theme_override_font_sizes/font_size = 46
text = " Click here to Toggle unlimited money"

[node name="GoBackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -162.0
offset_bottom = 60.0
grow_horizontal = 0
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("1_4mhyn")
theme_override_font_sizes/font_size = 46
text = " Back"

[node name="Checkmark" type="Sprite2D" parent="."]
visible = false
position = Vector2(1804, 1015)
scale = Vector2(0.36476606, 0.36476606)
texture = ExtResource("6_72caj")

[node name="X" type="Sprite2D" parent="."]
position = Vector2(1804, 1012)
scale = Vector2(0.3064831, 0.3064831)
texture = ExtResource("7_4pcfj")

[connection signal="pressed" from="CenterContainer/HBoxContainer/Dunes/SelectDunesButton" to="." method="_on_select_dunes_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Plains/SelectPlainsButton" to="." method="_on_select_plains_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Dungeon/SelectDungeonButton" to="." method="_on_select_dungeon_button_pressed"]
[connection signal="text_changed" from="ChangeWaveNum" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="SelectUnlimitedMoneyButton" to="." method="_on_select_unlimited_money_button_pressed"]
[connection signal="pressed" from="GoBackButton" to="." method="_on_go_back_button_pressed"]
